--- a/visualizing-gravitational-waves-around-a-spinning-black-hole-2.ipynb
+++ b/visualizing-gravitational-waves-around-a-spinning-black-hole-2.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Parameters for the spinning black hole\n",
     "mass = 1.0\n",
-    "spin = 5\n",
+    "spin = 3.2\n",
     "grid_size = 20\n",
     "speed_of_light = 299792458\n",
     "observer_velocity = np.array([0.5, 0.0, 0.0])\n",
@@ -23,9 +23,9 @@
     "\n",
     "fig = go.Figure()\n",
     "\n",
-    "num_frames = 50\n",
+    "num_frames = 70\n",
     "t_values = np.linspace(0, 2 * np.pi, num_frames)\n",
-    "delay_factor = 0.5\n",
+    "delay_factor = 0.01\n",
     "\n",
     "# Calculate the gravitational wave vectors at each point in the grid\n",
     "def calculate_gravitational_wave_vector(x, y, z, t):\n",
@@ -87,7 +87,7 @@
     "        v=V.flatten(),\n",
     "        w=W.flatten(),\n",
     "        sizemode=\"absolute\",\n",
-    "        sizeref=0.55,  # Adjust cone size for visibility\n",
+    "        sizeref=0.82,  # Adjust cone size for visibility\n",
     "        anchor=\"tail\",\n",
     "        colorscale='edge',  # Use a uniform color scale\n",
     "        showscale=True,  # Hide the color scale\n",
@@ -158,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "undefined.undefined.undefined"
   },
   "orig_nbformat": 4
  },
